acvus-mir-test/tests/snapshots/e2e__unary_negation.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   r1 = ref @n
     3 |   r2 = load r1
     4 |   r3 = -r2
     6 |   r4 = T0 + T0
     7 |   r5 = call #0(r3)
     8 |   r6 = r4 + r5
     9 |   return r6

    ; r0 (v13) : Int
    ; r1 (@n) : Ref<Int>
    ; r2 (v3) : Int
    ; r3 (v4) : Int
    ; r4 (v8) : String
    ; r5 (to_string(...)) : String
    ; r6 (v12) : String
    ; r7 (v7) : String
    ; r8 (x) : Int
    ; r9 (v6) : Ref<Int>
    ; r10 (v9) : Ref<Int>
    ; r11 (v1) : String
