acvus-mir-test/tests/snapshots/e2e__variable_accumulate_in_loop.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     5 |   r2 = T0 + T0
     6 |   r3 = ref @items
     7 |   r4 = load r3
    10 |   jump L0(0 (r5), T0, 0 (r6), r1)
    11 | L0(r7: Int, r8: String, r9: Int, r10: Int):
    12 |   list_step r11, r12 = r4[r7] else L1(r8)
    13 | L3:
    15 |   r13 = r9 + r11
    17 |   r14 = T0 + T0
    18 |   r15 = r8 + r14
    19 |   jump L0(r12, r15, r13, r11)
    20 | L1(r16: String):
    21 |   jump L2(r16)
    22 | L2(r17: String):
    23 |   r18 = r2 + r17
    24 |   r19 = call #0(r9)
    25 |   r20 = r18 + r19
    26 |   return r20

    ; r0 (v34) : Int
    ; r1 (v35) : Int
    ; r2 (v6) : String
    ; r3 (@items) : Ref<List<Int>>
    ; r4 (v8) : List<Int>
    ; r5 (v9) : Int
    ; r6 (v2) : Int
    ; r7 (v11) : Int
    ; r8 (v12) : String
    ; r9 (v36) : Int
    ; r10 (v37) : Int
    ; r11 (x) : Int
    ; r12 (v14) : Int
    ; r13 (v22) : Int
    ; r14 (v25) : String
    ; r15 (v26) : String
    ; r16 (v27) : String
    ; r17 (v28) : String
    ; r18 (v29) : String
    ; r19 (to_string(...)) : String
    ; r20 (v33) : String
    ; r21 (sum) : Int
    ; r22 (v30) : Ref<Int>
    ; r23 (v17) : String
    ; r24 (v1) : String
    ; r25 (v20) : Ref<Int>
    ; r26 (v18) : Ref<Int>
    ; r27 (x) : Int
    ; r28 (v24) : String
    ; r29 (v5) : String
    ; r30 (v23) : Ref<Int>
    ; r31 (v4) : Ref<Int>
    ; r32 (v10) : String
    ; r33 (sum) : Int
    ; r34 (v16) : Ref<Int>
