acvus-mir-test/tests/snapshots/e2e__variable_new_ref_binding.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 518
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @name
     2 |   assign @name = r1
     3 |   r2 = ref &@name
     5 |   r3 = string_concat [T0, r2]
     6 |   r4 = take @name
     7 |   commit @name = r4
     8 |   return r3

    ; r0 (v9) : &String
    ; r1 (@name) : String
    ; r2 (@name.) : &String
    ; r3 (v7) : String
    ; r4 (v8) : String
    ; r5 (result) : &String
    ; r6 (v5) : String
    ; r7 (@name) : String
    ; r8 (result) : &String
