acvus-mir-test/tests/snapshots/e2e__variable_new_ref_in_match_arm.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "yes"
  T2 = "no"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = undef
     4 |   r4 = fetch @role
     8 |   r5 = T0 + T0
     9 | L2:
    10 |   r6 = test r4 == "admin"
    11 |   jump_if r6 then L3 else L1
    12 | L3:
    16 |   r7 = T0 + T0
    17 |   jump L0(r7, T1, r3)
    18 | L1:
    22 |   r8 = T0 + T0
    23 |   jump L0(r8, r2, T2)
    24 | L0(r9: String, r10: String, r11: String):  ; merge_of L2
    25 |   r12 = r5 + r9
    26 |   r13 = r12 + T0
    27 |   commit @role = r4
    28 |   return r13

    ; r0 (v25) : String
    ; r1 (v26) : String
    ; r2 (v27) : String
    ; r3 (v28) : String
    ; r4 (@role) : String
    ; r5 (v7) : String
    ; r6 (v9) : Bool
    ; r7 (v14) : String
    ; r8 (v19) : String
    ; r9 (v20) : String
    ; r10 (v31) : String
    ; r11 (v32) : String
    ; r12 (v21) : String
    ; r13 (v23) : String
    ; r14 (v3) : String
    ; r15 (selected) : String
    ; r16 (v6) : String
    ; r17 (v15) : String
    ; r18 (v11) : String
    ; r19 (v30) : String
    ; r20 (@role) : String
    ; r21 (v4) : String
    ; r22 (v18) : String
    ; r23 (v24) : String
    ; r24 (@role) : String
    ; r25 (v29) : String
    ; r26 (v10) : String
    ; r27 (v13) : String
    ; r28 (v16) : String
