acvus-mir-test/tests/snapshots/e2e__variable_shadowing.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "outer"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     5 |   r2 = T0 + T0
     6 |   r3 = take @name
     8 |   r4 = r2 + T0
     9 |   r5 = r4 + r3
    10 |   return r5

    ; r0 (v12) : String
    ; r1 (v13) : String
    ; r2 (v5) : String
    ; r3 (@name) : String
    ; r4 (v9) : String
    ; r5 (v11) : String
    ; r6 (x) : String
    ; r7 (v2) : String
    ; r8 (v1) : String
    ; r9 (v8) : String
    ; r10 (v4) : String
