acvus-mir-test/tests/snapshots/e2e__variable_write.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 199
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   assign count = 42 (r1)
     4 |   r2 = string_concat [T0]
     5 |   return r2

    ; r0 (v5) : Int
    ; r1 (v1) : Int
    ; r2 (v4) : String
    ; r3 (v3) : String
    ; r4 (count) : Int
