acvus-mir-test/tests/snapshots/e2e__variable_write_computed.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   r1 = take @a
     3 |   r2 = take @b
     4 |   r3 = r1 + r2
     6 |   r4 = T0 + T0
     7 |   r5 = call #0(r3)
     8 |   r6 = r4 + r5
     9 |   return r6

    ; r0 (v11) : Int
    ; r1 (@a) : Int
    ; r2 (@b) : Int
    ; r3 (v4) : Int
    ; r4 (v7) : String
    ; r5 (to_string(...)) : String
    ; r6 (v10) : String
    ; r7 (v6) : String
    ; r8 (v1) : String
    ; r9 (result) : Int
