acvus-mir-test/tests/snapshots/e2e__variable_write_in_iteration.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     5 |   r2 = T0 + T0
     6 |   r3 = ref @items
     7 |   r4 = load r3
    10 |   jump L0(0 (r5), T0, 0 (r6), r1)
    11 | L0(r7: Int, r8: String, r9: Int, r10: Int):
    12 |   list_step r11, r12 = r4[r7] else L1(r8)
    13 | L3:
    16 |   r13 = T0 + T0
    17 |   r14 = r8 + r13
    18 |   jump L0(r12, r14, r11, r11)
    19 | L1(r15: String):
    20 |   jump L2(r15)
    21 | L2(r16: String):
    22 |   r17 = r2 + r16
    23 |   r18 = call #0(r9)
    24 |   r19 = r17 + r18
    25 |   return r19

    ; r0 (v31) : Int
    ; r1 (v32) : Int
    ; r2 (v6) : String
    ; r3 (@items) : Ref<List<Int>>
    ; r4 (v8) : List<Int>
    ; r5 (v9) : Int
    ; r6 (v2) : Int
    ; r7 (v11) : Int
    ; r8 (v12) : String
    ; r9 (v33) : Int
    ; r10 (v34) : Int
    ; r11 (x) : Int
    ; r12 (v14) : Int
    ; r13 (v22) : String
    ; r14 (v23) : String
    ; r15 (v24) : String
    ; r16 (v25) : String
    ; r17 (v26) : String
    ; r18 (to_string(...)) : String
    ; r19 (v30) : String
    ; r20 (last) : Int
    ; r21 (v17) : String
    ; r22 (v1) : String
    ; r23 (v20) : Ref<Int>
    ; r24 (v4) : Ref<Int>
    ; r25 (v18) : Ref<Int>
    ; r26 (v21) : String
    ; r27 (v5) : String
    ; r28 (v27) : Ref<Int>
    ; r29 (v10) : String
    ; r30 (v16) : Ref<Int>
    ; r31 (x) : Int
