acvus-mir-test/tests/snapshots/e2e__variable_write_then_read.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     1 |   assign x = 42 (r0)
     3 |   r1 = ref &x
     4 |   r2 = call #0(r1)
     5 |   r3 = string_concat [T0, r2]
     6 |   return r3

    ; r0 (v1) : Int
    ; r1 (x.) : &Int
    ; r2 (to_string(...)) : String
    ; r3 (v6) : String
    ; r4 (v3) : String
    ; r5 (x) : Int
