acvus-mir-test/tests/snapshots/e2e__variant_none_expr.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = variant None
     2 |   assign x = r1
     4 |   r2 = string_concat [T0]
     5 |   return r2

    ; r0 (v5) : <error>
    ; r1 (v1) : <error>
    ; r2 (v4) : String
    ; r3 (v3) : String
